--- a/marvel/index.html
+++ b/marvel/index.html
@@ -546,8 +546,8 @@
 					<p> > 500 GB Cloud Storage</p>
 					<p> > Mobile Website and Store</p>
 					<p> > 24/7 Support</p>
-				
-				<button><a href="#" class="banner8_button">Get Started Now</a></button></div>
+				</div>				
+				<button><a href="#" class="banner8_button">Get Started Now</a></button>
 				</div>
 				</div>
 			</div>
