--- a/marvel/index.html
+++ b/marvel/index.html
@@ -747,7 +747,7 @@
         <textarea placeholder="Type your massage"  name="message"></textarea>
       </div>
       <button class="button_contact">
-					<a href="#" class="button">Contact Us</a>
+					<a href="#" class="button">Send</a>
 			</button>
 			</form>
 			</div>
