--- a/javaScript/index.html
+++ b/javaScript/index.html
@@ -9,6 +9,6 @@
 	<div style="background-color: burlywood">6</div>
 	<div style="background-color: chartreuse">19</div>
 	<div style="background-color: orange">3</div>
-	<script src="ex1.js"></script>
+	<script type="text/javascript" src="ex1.js"></script>
 </body>
 </html>
