--- a/form/index.html
+++ b/form/index.html
@@ -24,8 +24,8 @@
 		</div>
 		<div>
 			<label>Gender</label>				
-			<input type="radio" name="a" id="_button" class="gender field"/>women
-			<input type="radio" name="a" id="_button" class="gender field"/>man
+			<input type="radio" name="a" id="_button" class="gender field"/>female
+			<input type="radio" name="a" id="_button" class="gender field"/>male
 		</div>
 		<div>
 			<label>Country</label>
