--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -162,190 +162,198 @@
 					</div>
 				</div>
 			</div>
-		</div></div>
-		<div class="work">
-			<div class="wrapper">
-				<div class="logan1 lovely">Lovely work </div>
-				<div id="gridimg">
-					<div class="container">
-						<img src="image/pic5.png" alt="">
-						<div class="hov">
-							<div class="partner">partnership guildnes</div>
-							<div class="plus"><a href="#">+</a></div>
-						</div>
-					</div>
-					<div class="container">
-						<img src="image/pic6.png" alt="">
-						<div class="hov">
-							<div class="partner">partnership guildnes</div>
-							<div class="plus"><a href="#">+</a></div>
-						</div>
-					</div>
-					<div class="container">
-						<img src="image/pic7.png" alt="">
-						<div class="hov">
-							<div class="partner">partnership guildnes</div>
-							<div class="plus"><a href="#">+</a></div>
-						</div>
-					</div>
-					<div class="container">
-						<img src="image/pic8.png" alt="">
-						<div class="hov">
-							<div class="partner">partnership guildnes</div>
-							<div class="plus"><a href="#">+</a></div>
-						</div>
-					</div>
-					<div class="container">
-						<img src="image/pic9.png" alt="">
-						<div class="hov">
-							<div class="partner">partnership guildnes</div>
-							<div class="plus"><a href="#">+</a></div>
-						</div>
-					</div>
-					<div class="container">
-						<img src="image/pic10.png" alt="">
-						<div class="hov">
-							<div class="partner">partnership guildnes</div>
-							<div class="plus"><a href="#">+</a></div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="wrapper rep">
-				<button class="button" id="show">show me more</button>
-			</div>
 		</div>
-		<div class="services">
-			<div class="wrapper">
-				<div class="logan1">What we do</div>
-				<div class="firstline">
-					<div class="pack">
-						<img src="image/1-48.png">
-						<div class="topic">easy theme setup</div>
-						<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
-							egestas fermentum.</div>
-					</div>
-					<div class="pack">
-						<img src="image/2-48.png">
-						<div class="topic">pixel perfect design</div>
-						<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
-							egestas fermentum.</div>
-					</div>
-					<div class="pack">
-						<img src="image/3-48.png">
-						<div class="topic">responsive display</div>
-						<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
-							egestas fermentum.</div>
-					</div>
-					<div class="pack">
-						<img src="image/4-48.png">
-						<div class="topic">24/7 support</div>
-						<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
-							egestas fermentum.</div>
+	</div>
+	<div class="work">
+		<div class="wrapper">
+			<div class="logan1 lovely">Lovely work </div>
+			<div id="gridimg">
+				<div class="container">
+					<img src="image/pic5.png" alt="">
+					<div class="hov">
+						<div class="partner">partnership guildnes</div>
+						<div class="plus"><a href="#">+</a></div>
 					</div>
 				</div>
-				<div class="firstline">
-					<div class="pack">
-						<img src="image/5-48.png">
-						<div class="topic">easy theme setup</div>
-						<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
-							egestas fermentum.</div>
+				<div class="container">
+					<img src="image/pic6.png" alt="">
+					<div class="hov">
+						<div class="partner">partnership guildnes</div>
+						<div class="plus"><a href="#">+</a></div>
 					</div>
-					<div class="pack">
-						<img src="image/6-48.png">
-						<div class="topic">pixel perfect design</div>
-						<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
-							egestas fermentum.</div>
+				</div>
+				<div class="container">
+					<img src="image/pic7.png" alt="">
+					<div class="hov">
+						<div class="partner">partnership guildnes</div>
+						<div class="plus"><a href="#">+</a></div>
 					</div>
-					<div class="pack bott">
-						<img src="image/7-48.png">
-						<div class="topic">responsive display</div>
-						<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
-							egestas fermentum.</div>
+				</div>
+				<div class="container">
+					<img src="image/pic8.png" alt="">
+					<div class="hov">
+						<div class="partner">partnership guildnes</div>
+						<div class="plus"><a href="#">+</a></div>
 					</div>
-					<div class="pack bott">
-						<img src="image/8-48.png">
-						<div class="topic">24/7 support</div>
-						<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
-							egestas fermentum.</div>
+				</div>
+				<div class="container">
+					<img src="image/pic9.png" alt="">
+					<div class="hov">
+						<div class="partner">partnership guildnes</div>
+						<div class="plus"><a href="#">+</a></div>
+					</div>
+				</div>
+				<div class="container">
+					<img src="image/pic10.png" alt="">
+					<div class="hov">
+						<div class="partner">partnership guildnes</div>
+						<div class="plus"><a href="#">+</a></div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="features">
-			<div class="wrapper">
-				<div class="logan1 lovely">features</div>
-				<div id="features">
-					<div class="information">
-						<img src="image/pic11.png" alt="">
-						<div class="topic white">product design: eames chairs</div>
-						<div class="subscribe silv">Eames designs are certainly iconic. Everyone of us know at least two or three of
-							their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</div>
-					</div>
-					<div class="information">
-						<img src="image/pic12.png" alt="">
-						<div class="topic white">elegant and colorful logos</div>
-						<div class="subscribe silv">Eames designs are certainly iconic. Everyone of us know at least two or three of
-							their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</div>
-					</div>
-					<div class="information">
-						<img src="image/pic13.png" alt="">
-						<div class="topic white">a showcase of creative</div>
-						<div class="subscribe silv">Eames designs are certainly iconic. Everyone of us know at least two or three of
-							their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</div>
-					</div>
+		<div class="wrapper rep">
+			<button class="button" id="show">show me more</button>
+		</div>
+	</div>
+	<div class="services">
+		<div class="wrapper">
+			<div class="logan1">What we do</div>
+			<div class="firstline">
+				<div class="pack">
+					<img src="image/1-48.png">
+					<div class="topic">easy theme setup</div>
+					<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
+						egestas fermentum.</div>
+				</div>
+				<div class="pack">
+					<img src="image/2-48.png">
+					<div class="topic">pixel perfect design</div>
+					<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
+						egestas fermentum.</div>
+				</div>
+				<div class="pack">
+					<img src="image/3-48.png">
+					<div class="topic">responsive display</div>
+					<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
+						egestas fermentum.</div>
+				</div>
+				<div class="pack">
+					<img src="image/4-48.png">
+					<div class="topic">24/7 support</div>
+					<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
+						egestas fermentum.</div>
+				</div>
+			</div>
+			<div class="firstline">
+				<div class="pack">
+					<img src="image/5-48.png">
+					<div class="topic">easy theme setup</div>
+					<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
+						egestas fermentum.</div>
+				</div>
+				<div class="pack">
+					<img src="image/6-48.png">
+					<div class="topic">pixel perfect design</div>
+					<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
+						egestas fermentum.</div>
+				</div>
+				<div class="pack bott">
+					<img src="image/7-48.png">
+					<div class="topic">responsive display</div>
+					<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
+						egestas fermentum.</div>
+				</div>
+				<div class="pack bott">
+					<img src="image/8-48.png">
+					<div class="topic">24/7 support</div>
+					<div class="subsribe">Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit
+						egestas fermentum.</div>
 				</div>
 			</div>
 		</div>
-		<div class="touch">
-			<div class="wrapper">
-				<div class="logan1 stay">Stay in touch</div>
-			</div>
-			<div id="map"></div>
-			<div class="wrapper">
-				<div class="mean">
-					<div class="contactinfo">
-						<div class="topic">contact information</div>
-						<div class="subscribe darker">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique
-							nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida.</div>
-						<div id="marg" class="subscribe darker">Cras fermentum elit quis magna congue, vel sodales arcu vestibulum. Nunc
-							lobortis dui magna, quis dapibus lacus </div>
-					</div>
-					<div class="form">
-						<form action="" method="">
-							<div class="fieldset">
-								<div class="top">
-									<label for="name">Your name</label>
-									<input id="name" type="text" name="name">
-								</div>
-								<div class="top">
-									<label for="email">Your email</label>
-									<input id="email" type="email" name="email">
-								</div>
-							</div>
-							<div class="bottom">
-								<label for="message">your message</label>
-								<textarea id="message" type="text" name="message"></textarea>
-								<button class="button send">send message</button>
-							</div>
-						</form>
-					</div>
+	</div>
+	<div class="features">
+		<div class="wrapper">
+			<div class="logan1 lovely">features</div>
+			<div id="features">
+				<div class="information">
+					<img src="image/pic11.png" alt="">
+					<div class="topic white">product design: eames chairs</div>
+					<div class="subscribe silv">Eames designs are certainly iconic. Everyone of us know at least two or three of
+						their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</div>
+				</div>
+				<div class="information">
+					<img src="image/pic12.png" alt="">
+					<div class="topic white">elegant and colorful logos</div>
+					<div class="subscribe silv">Eames designs are certainly iconic. Everyone of us know at least two or three of
+						their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</div>
+				</div>
+				<div class="information">
+					<img src="image/pic13.png" alt="">
+					<div class="topic white">a showcase of creative</div>
+					<div class="subscribe silv">Eames designs are certainly iconic. Everyone of us know at least two or three of
+						their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</div>
 				</div>
 			</div>
 		</div>
-		<div class="footer">
-			<div class="wrapper">
-				<div class="subscribe">Copyright 2014 by PSD Booster. All Rights Reserved.</div>
-				<div class="networks">
-					<div class="firsticons">
-						<a href="#"><img src="image/twitter%20(2).png"></a>
-						<a href="#"><img src="image/fb.png"></a>
-						<a href="#"><img src="image/skype.png"></a>
-						<a href="#"><img src="image/Behance.png"></a>
-						<a href="#"><img src="image/linkedin%20(2).png"></a>
-					</div>
-				</div>
-			</div>
-		</div>
+	</div>
+	<div class="touch">
+	  <div class="wrapper"><div class="logan1 stay">Stay in touch</div></div>
+	  <div id="map"></div>
+	  <div class="wrapper">
+	    <div class="mean">
+	      <div class="contactinfo">
+	        <div class="topic">contact information</div>
+	        <div class="subscribe darker">
+	          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi
+	          metus, tristique nec dolor non, ornare sagittis dolor. Nulla
+	          vestibulum lacus sed molestie gravida.
+	        </div>
+	        <div id="marg" class="subscribe darker">
+	          Cras fermentum elit quis magna congue, vel sodales arcu vestibulum.
+	          Nunc lobortis dui magna, quis dapibus lacus
+	        </div>
+	      </div>
+	      <div class="form">
+	        <form action="" method="">
+	          <div class="fieldset">
+	            <div class="top">
+	              <label for="name">Your name</label>
+	              <input id="name" type="text" name="name" />
+	            </div>
+	            <div class="top">
+	              <label for="email">Your email</label>
+	              <input id="email" type="email" name="email" />
+	            </div>
+	          </div>
+	          <div class="bottom">
+	            <label for="message">your message</label>
+	            <textarea id="message" type="text" name="message"></textarea>
+	            <button class="button send">send message</button>
+	          </div>
+	        </form>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="footer">
+	  <div class="wrapper">
+	    <div class="subscribe">
+	      Copyright 2014 by PSD Booster. All Rights Reserved.
+	    </div>
+	    <div class="networks">
+	      <div class="firsticons">
+	        <a href="#"><img src="image/twitter%20(2).png"/></a>
+	        <a href="#"><img src="image/fb.png"/></a>
+	        <a href="#"><img src="image/skype.png"/></a>
+	        <a href="#"><img src="image/Behance.png"/></a>
+	        <a href="#"><img src="image/linkedin%20(2).png"/></a>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
 </body>
 </html>
