--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -1,236 +1,248 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Elena</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Ubuntu:700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:600"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=PT+Sans:400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="font.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
+  </head>
 
-	<title>Elena</title>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-	<link rel="stylesheet" type="text.css" href="reset.css">
-
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
-
-	<link rel="stylesheet" href="font.css" />
-	<link rel="stylesheet" href="style.css" />
-	<link rel="stylesheet" href="media.css" />
-</head>
-<body>
-	<header>
-		<div class="container">
-			<div class="logo">
-		<a href="#">
-			<img src="image/logo.png" alt="Elena">
-		</a>
-	</div>
-		<div class="header_content">
-			<nav class="top_menu">
-				<a href="#">Home</a>
-				<a href="#services">Services</a>
-				<a href="#features">Features</a>
-				<a href="#contact">Contact</a>
-			</nav>
-			<h1>Have a good day</h1>
-			<p>Just for you on themeforest</p>
-			<a href="#" class=" button header_button">
-				Get your copy now
-			</a>
-		</div>
-		</div>
-	</header>
-	<main class="main_content">
-	  <section id="services" class="three_columns">
-	    <div class="container">
-	      <ul class="flex_container">
-	        <li>
-	          <div class="three_columns_title">
-	            <div class="heart top">
-	              <span><img src="image/user-group%20copy.png" alt="#"/></span>
-	            </div>
-	            <h2>Profecionals</h2>
-	          </div>
-	          <p>Lorem ipsum dolor sit amet, consectetur sit amet ipsum elit.</p>
-	        </li>
-	        <li>
-	          <div class="three_columns_title">
-	            <div class="heart top">
-	              <span><img src="image/heart_1.png" alt="#"/></span>
-	            </div>
-	            <h2>Amateurs</h2>
-	          </div>
-	          <p>Lorem ipsum dolor sit amet, consectetur sit amet ipsum elit.</p>
-	        </li>
-	        <li>
-	          <div class="three_columns_title">
-	            <div class="heart top">
-	              <span><img src="image/headset.png" alt="#"/></span>
-	            </div>
-	            <h2>For everyone</h2>
-	          </div>
-	          <p>Lorem ipsum dolor sit amet, consectetur sit amet ipsum elit.</p>
-	        </li>
-	      </ul>
-	    </div>
-	  </section>
-	</main>
-	<main>
-		<section class="two_columns">
-		  <div class="container flex_container">
-		    <div class="two_columns_info">
-		      <div class="cover">
-		        <span><img src="image/car.jpg" alt=""/></span>
-		      </div>
-		      <h3>Responsive email template</h3>
-		      <p>
-		        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium
-		        assumenda necessitatibus.
-		      </p>
-		      <a href="#" class=" button content_button"> Read more </a>
-		    </div>
-		    <div class="two_columns_info">
-		      <div class="cover">
-		        <span><img src="image/couple.jpg" alt=""/></span>
-		      </div>
-		      <h3>Fully compatible template</h3>
-		      <p>
-		        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium
-		        assumenda necessitatibus.
-		      </p>
-		      <a href="#" class=" button content_button"> Read more </a>
-		    </div>
-		  </div>
-		</section>
-		<section id="features" class="middle">
-		  <div class="container">
-		    <div class="middle_content">
-		      <h3>
-		        <span
-		          ><div class="cover"><img src="image/rrrr.png" alt="" /></div></span
-		        >Responsive email template
-		      </h3>
-		      <p>
-		        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, aperiam
-		        iusto laboriosam voluptas. Perferendis velit deleniti libero ut, minus
-		        doloremque, pariatur, similique delectus laudantium ex excepturi
-		        quaerat, perspiciatis sunt aliquam.
-		      </p>
-		      <a href="#" class=" button content_button"> Read more </a>
-		    </div>
-		  </div>
-		</section>
-		<section class="three_columns privilege">
-		  <div class="container">
-		    <ul class="flex_container">
-		      <li>
-		        <div class="three_columns_title_bot">
-		          <div class="cover">
-		            <span><img src="image/traffic_light.png" alt=""/></span>
-		          </div>
-		          <h2>FULLY Layered PSD</h2>
-		        </div>
-		        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. .</p>
-		        <a href="#" class="check">Check this out &gt;</a>
-		      </li>
-		      <li>
-		        <div class="three_columns_title_bot">
-		          <div class="cover">
-		            <span><img src="image/umbrella.png" alt=""/></span>
-		          </div>
-		          <h2>FUll Compatibility</h2>
-		        </div>
-		        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. .</p>
-		        <a href="#" class="check">Check this out &gt;</a>
-		      </li>
-		      <li class="align-self">
-		        <div class="three_columns_title_bot">
-		          <div class="cover">
-		            <span><img src="image/sneakers.png" alt=""/></span>
-		          </div>
-		          <h2>very great modules</h2>
-		        </div>
-		        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. .</p>
-		        <a href="#" class="check">Check this out &gt;</a>
-		      </li>
-		    </ul>
-		  </div>
-		</section>
-		<section id="contact" class="two_columns extra">
-		  <div class="container flex_container">
-		    <div class="two_columns_info">
-		      <h3>
-		        <span><img src="image/messege%20.png" alt=""/></span>Send it now
-		      </h3>
-		      <p>
-		        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium
-		        assumenda necessitatibus.
-		      </p>
-		      <a href="#" class=" button content_button"> Read more </a>
-		    </div>
-		    <div class="two_columns_info">
-		      <h3>
-		        <span><img src="image/write%20.png" alt=""/></span>Very nice to see
-		      </h3>
-		      <p>
-		        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium
-		        assumenda necessitatibus.
-		      </p>
-		      <a href="#" class=" button content_button"> Read more </a>
-		    </div>
-		  </div>
-		</section>
-		<section class="middle last_block">
-		  <div class="container">
-		    <div class="middle_content">
-		      <div class="last_image">
-		        <div class="cover"><img src="image/people.png" alt="" /></div>
-		      </div>
-		      <div class="last_info ">
-		        <h3>Just For you on themeforest</h3>
-		        <p>
-		          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod,
-		          aperiam iusto laboriosam voluptas. Lorem ipsum dolor sit amet,
-		          consectetur adipisicing elit.
-		        </p>
-		        <a href="#" class=" button content_button"> <div>Read more</div> </a>
-		      </div>
-		    </div>
-		  </div>
-		</section>
-		<section class="middle partners">
-		  <div class="container">
-		    <div class="middle_content">
-		      <h3>
-		        <span
-		          ><a href="#"><img src="image/%D0%B7%D0%B2.png" alt="#"/></a></span
-		        >This template was featured on
-		      </h3>
-		      <div class="brand flex_container">
-		        <a href="#"><img src="image/brand_1.png" alt="Tech Crunch"/></a>
-		        <a href="#"><img src="image/brand_2.png" alt="Promail"/></a>
-		        <a href="#"><img src="image/brand_3.png" alt="Mashable"/></a>
-		        <a href="#"><img src="image/brand_4.png" alt="Atlaspix"/></a>
-		      </div>
-		    </div>
-		  </div>
-		</section>
-	</main>
-	<footer>
-	  <div class="footer_content">
-	    <div class="container flex_container">
-	      <div class="copyright">
-	        <p>
-	          Elenea © <span class="copy">copyright 2013 - Unsubscribe here</span>
-	        </p>
-	      </div>
-	      <div class="social_links">
-	        <a href="#"><img src="image/gmail.png" href="#"/></a>
-	        <a href="#"><img src="image/fb.png" href="#"/></a>
-	        <a href="#"><img src="image/twitter.png" href="#"/></a>
-	      </div>
-	    </div>
-	  </div>
-	</footer>
-</body>
+  <body>
+    <header>
+      <div class="container">
+        <div class="logo">
+          <a href="#"><img src="image/logo.png" alt="Elena" /> </a>
+        </div>
+        <div class="header_content">
+          <nav class="top_menu">
+            <a href="#">Home</a><a href="#services">Services</a>
+            <a href="#features">Features</a><a href="#contact">Contact</a>
+          </nav>
+          <h1>Have a good day</h1>
+          <p>Just for you on themeforest</p>
+          <a href="#" class=" button header_button">Get your copy now</a>
+        </div>
+      </div>
+    </header>
+    <main class="main_content">
+      <section id="services" class="three_columns">
+        <div class="container">
+          <ul class="flex_container">
+            <li>
+              <div class="three_columns_title">
+                <div class="heart top">
+                  <span><img src="image/user-group%20copy.png" alt="#"/></span>
+                </div>
+                <h2>Profecionals</h2>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur sit amet ipsum elit.
+              </p>
+            </li>
+            <li>
+              <div class="three_columns_title">
+                <div class="heart top">
+                  <span><img src="image/heart_1.png" alt="#"/></span>
+                </div>
+                <h2>Amateurs</h2>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur sit amet ipsum elit.
+              </p>
+            </li>
+            <li>
+              <div class="three_columns_title">
+                <div class="heart top">
+                  <span><img src="image/headset.png" alt="#"/></span>
+                </div>
+                <h2>For everyone</h2>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur sit amet ipsum elit.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <main>
+      <section class="two_columns">
+        <div class="container flex_container">
+          <div class="two_columns_info">
+            <div class="cover">
+              <span><img src="image/car.jpg" alt=""/></span>
+            </div>
+            <h3>Responsive email template</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Laudantium assumenda necessitatibus.
+            </p>
+            <a href="#" class=" button content_button"> Read more </a>
+          </div>
+          <div class="two_columns_info">
+            <div class="cover">
+              <span><img src="image/couple.jpg" alt=""/></span>
+            </div>
+            <h3>Fully compatible template</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Laudantium assumenda necessitatibus.
+            </p>
+            <a href="#" class=" button content_button"> Read more </a>
+          </div>
+        </div>
+      </section>
+      <section id="features" class="middle">
+        <div class="container">
+          <div class="middle_content">
+            <h3>
+              <span
+                ><div class="cover">
+                  <img src="image/rrrr.png" alt="" /></div></span
+              >Responsive email template
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod,
+              aperiam iusto laboriosam voluptas. Perferendis velit deleniti
+              libero ut, minus doloremque, pariatur, similique delectus
+              laudantium ex excepturi quaerat, perspiciatis sunt aliquam.
+            </p>
+            <a href="#" class=" button content_button"> Read more </a>
+          </div>
+        </div>
+      </section>
+      <section class="three_columns privilege">
+        <div class="container">
+          <ul class="flex_container">
+            <li>
+              <div class="three_columns_title_bot">
+                <div class="cover">
+                  <span><img src="image/traffic_light.png" alt=""/></span>
+                </div>
+                <h2>FULLY Layered PSD</h2>
+              </div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. .</p>
+              <a href="#" class="check">Check this out &gt;</a>
+            </li>
+            <li>
+              <div class="three_columns_title_bot">
+                <div class="cover">
+                  <span><img src="image/umbrella.png" alt=""/></span>
+                </div>
+                <h2>FUll Compatibility</h2>
+              </div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. .</p>
+              <a href="#" class="check">Check this out &gt;</a>
+            </li>
+            <li class="align-self">
+              <div class="three_columns_title_bot">
+                <div class="cover">
+                  <span><img src="image/sneakers.png" alt=""/></span>
+                </div>
+                <h2>very great modules</h2>
+              </div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. .</p>
+              <a href="#" class="check">Check this out &gt;</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="contact" class="two_columns extra">
+        <div class="container flex_container">
+          <div class="two_columns_info">
+            <h3>
+              <span><img src="image/messege%20.png" alt=""/></span>Send it now
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Laudantium assumenda necessitatibus.
+            </p>
+            <a href="#" class=" button content_button"> Read more </a>
+          </div>
+          <div class="two_columns_info">
+            <h3>
+              <span><img src="image/write%20.png" alt=""/></span>Very nice to
+              see
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Laudantium assumenda necessitatibus.
+            </p>
+            <a href="#" class=" button content_button"> Read more </a>
+          </div>
+        </div>
+      </section>
+      <section class="middle last_block">
+        <div class="container">
+          <div class="middle_content">
+            <div class="last_image">
+              <div class="cover"><img src="image/people.png" alt="" /></div>
+            </div>
+            <div class="last_info ">
+              <h3>Just For you on themeforest</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod,
+                aperiam iusto laboriosam voluptas. Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit.
+              </p>
+              <a href="#" class=" button content_button">
+                <div>Read more</div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="middle partners">
+        <div class="container">
+          <div class="middle_content">
+            <h3>
+              <span
+                ><a href="#"
+                  ><img src="image/%D0%B7%D0%B2.png" alt="#"/></a></span
+              >This template was featured on
+            </h3>
+            <div class="brand flex_container">
+              <a href="#"><img src="image/brand_1.png" alt="Tech Crunch"/></a>
+              <a href="#"><img src="image/brand_2.png" alt="Promail"/></a>
+              <a href="#"><img src="image/brand_3.png" alt="Mashable"/></a>
+              <a href="#"><img src="image/brand_4.png" alt="Atlaspix"/></a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer_content">
+        <div class="container flex_container">
+          <div class="copyright">
+            <p>
+              Elenea ©
+              <span class="copy">copyright 2013 - Unsubscribe here</span>
+            </p>
+          </div>
+          <div class="social_links">
+            <a href="#"><img src="image/gmail.png" href="#"/></a>
+            <a href="#"><img src="image/fb.png" href="#"/></a>
+            <a href="#"><img src="image/twitter.png" href="#"/></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
